<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <include layout="@layout/toolbar"
        android:id="@+id/toolbar" />
    <View
        android:id="@+id/view"
        android:layout_width="409dp"
        android:layout_height="734dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="290dp"
        android:layout_height="75dp"
        android:text="@string/HP1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.191" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="101dp"
        android:layout_height="107dp"
        android:layout_marginTop="268dp"
        android:backgroundTint="@color/cardview_light_background"
        android:text="@string/HP2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#020101"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="100dp"
        android:layout_height="107dp"
        android:layout_marginTop="424dp"
        android:text="@string/HP3"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#0E0505"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="117dp"
        android:layout_height="129dp"
        android:layout_marginTop="424dp"
        android:text="@string/HP4"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#0C0B0B"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="102dp"
        android:layout_height="129dp"
        android:layout_marginTop="424dp"
        android:text="@string/HP5"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#0E0E0E"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="99dp"
        android:layout_height="108dp"
        android:layout_marginTop="268dp"
        android:text="@string/HP6"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#0C0404"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="268dp"
        android:text="@string/HP7"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#0C0606"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.982"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <Button
        android:id="@+id/backFromHP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="Home"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>